# Portfolio

darkestDungeon/: CMakeLists.txt  chain.h  character.h  class.h  item.h  main.c
spotify/: db.py  thewave.py  thewave.sql
spotify/static/: connexionStyle.css  musique.css  theWaveStyle.css
spotify/templates/: album.html  artiste.html  connexion.html  creePlay.html  editer.html  groupes.html  inscription.html  musique.html  musique_info.html  pageUtilisateur.html  playlist.html  profil.html  recherche.html  resultat.html  suggestion.html  theWave.html  utilisateur.html
